test/test_cases/invalid/semanticErr/variables/basicTypeErr05.ast
-- Test: basicTypeErr05.wacc

-- Uploaded file: 
---------------------------------------------------------------
# type mismatch: bool <- char

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  bool b = 't'
end
---------------------------------------------------------------

-- Compiler Output:
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:11 -- Incompatible type at 't' (expected: BOOL, actual: CHAR)

